[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmh3"
version = "4.2.0-alpha.3"
description = "Python extension for MurmurHash (MurmurHash3), a set of fast and robust hash functions."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["utility", "hash", "MurmurHash"]
authors = [
  {name = "Hajime Senuma", email="hajime.senuma@gmail.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]

[project.optional-dependencies]
test = [
  "mypy >= 1.0",
  "pytest >= 7.0.0"
]

[project.urls]
Homepage = "https://pypi.org/project/mmh3/"
Repository = "https://github.com/hajimes/mmh3"
Changelog = "https://github.com/hajimes/mmh3/blob/master/docs/changelog.md"
"Bug Tracker" = "https://github.com/hajimes/mmh3/issues"

[tool.isort]
profile = "black"
src_paths = ["src/mmh3/__init__.pyi", "util", "tests"]

[tool.pylint.main]
# Use multiple processes to speed up Pylint.
# The value 0 specifies the number of processors to be auto-detected.
# This setting can be found in the template file of super-linter 7.0.0.
jobs=0

[tool.pylint."messages control"]
# import-error: An error tricky to resolve, especially on super-linter.
# wrong-import-order: Respect isort's import order.
disable = ["import-error", "wrong-import-order"]