[build-system]
# setuptools >= 74.1.0 required to build C extensions via pyproject.toml
requires = ["setuptools >= 74.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmh3"
version = "5.2.1"
description = "Python extension for MurmurHash (MurmurHash3), a set of fast and robust hash functions."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["utility", "hash", "MurmurHash"]
requires-python = ">=3.10"
authors = [
  {name = "Hajime Senuma", email="hajime.senuma@gmail.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Free Threading :: 2 - Beta",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]

[project.optional-dependencies]
test = [
  "pytest == 9.0.3",
  "pytest-sugar == 1.1.1"
]
lint = [
  "actionlint-py == 1.7.12.24",
  "clang-format == 22.1.4",
  "codespell == 2.4.2",
  "pylint == 4.0.5",
  "ruff == 0.15.12"
]
type = [
  "mypy == 1.20.2"
]
docs = [
  "myst-parser == 5.0.0",
  "shibuya == 2026.1.9",
  "sphinx == 8.2.3",
  "sphinx-copybutton == 0.5.2"
]
benchmark = [
  "pymmh3 == 0.0.5",
  "pyperf == 2.10.0",
  "xxhash == 3.7.0"
]
plot = [
  "matplotlib == 3.10.9",
  "pandas == 3.0.1"
]

[project.urls]
Homepage = "https://pypi.org/project/mmh3/"
Documentation = "https://mmh3.readthedocs.io/"
Repository = "https://github.com/hajimes/mmh3"
Changelog = "https://github.com/hajimes/mmh3/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/hajimes/mmh3/issues"

[tool.codespell]
# As of 2026-03-02, skip has an issue on super-linter
# https://github.com/super-linter/super-linter/issues/7466
skip = "*/paper.bib,./build"
# Collet is a surname, Commun is an abbr for a journal name,
# fo is used in several test strings, and Ines is also a surname.
ignore-words-list = "Collet,Commun,fo,Ines"

[tool.ruff]
src = ["src/mmh3/__init__.pyi", "util", "tests", "benchmark", "docs"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "ISC", "NPY"]

[tool.ruff.lint.isort]
known-first-party = ["mmh3"]

[tool.setuptools]
include-package-data = true
ext-modules = [
  {name = "mmh3", sources = ["./src/mmh3/mmh3module.c", "./src/mmh3/murmurhash3.c"]}
]

[tool.setuptools.package-data]
mmh3 = ["*.h"]

[tool.pylint]
ignore-paths = [
  "^build",
  "^venv",
  "^.venv",
  "^.tox",
  "^src/mmh3/__init__.pyi"
]
# Use multiple processes to speed up Pylint.
# The value 0 specifies the number of processors to be auto-detected.
# This setting can be found in the template file of super-linter 7.0.0.
jobs = 0
# import-error: An error tricky to resolve, especially on super-linter.
# wrong-import-order: Respect Ruff's import order.
disable = [
  "import-error",
  "wrong-import-order"
]
